# bitcoin-rpc-web

./: AGENTS.md  Cargo.toml  README.md  TODO.md  flake.nix  review.md
src/: logging.rs  main.rs  music.rs  protocol.rs  rpc.rs  rpc_limiter.rs  thread_pool.rs  zmq.rs
src/app/: constants.rs  message.rs  mod.rs  state.rs  subscription.rs  update.rs  view.rs
src/app/update/: config.rs  dashboard.rs  keyboard.rs  mod.rs  music.rs  rpc.rs  zmq.rs
src/core/: config_store.rs  dashboard_service.rs  mod.rs  rpc_client.rs  schema.rs
src/ui/: components.rs  config.rs  dashboard.rs  mod.rs  music_bar.rs  peer_table.rs  rpc.rs
tunes/: elw-hom2.xm  readme.txt  resii.mod  sr_sergio_-_endless_wave.xm  sr_sergio_-_the_rebel_princess.xm  sr_sergio_-_trance_e9.xm  toy_story.mod
web/: app.js  index.html  style.css
