[package]
name = "bitcoin-rpc-web"
version = "0.1.0"
edition = "2024"

[dependencies]
wry = "0.53"
winit = "0.30"
ureq = { version = "3", features = ["json"] }
serde_json = "1"
xmrs = { version = "0.9", features = ["std", "import"] }
xmrsplayer = "0.9"
rodio = { version = "0.20", default-features = false }
zmq2 = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
