[package]
name = "bitcoin-rpc-web"
version = "0.1.0"
edition = "2024"

[features]
default = ["audio"]
audio = ["dep:rodio", "dep:xmrs", "dep:xmrsplayer"]

[dependencies]
iced = { version = "0.13", features = ["wgpu", "tokio"] }
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
xmrs = { version = "0.9", features = ["std", "import"], optional = true }
xmrsplayer = { version = "0.9", optional = true }
rodio = { version = "0.20", default-features = false, optional = true }
zmq2 = "0.5"
sha2 = "0.10"
